--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,6 +12,8 @@ jobs:
   build-and-push-docker-image:
     name: Build Docker image and push to repositories
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
       - uses: actions/checkout@v3
@@ -22,11 +24,17 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag ghcr.io/chinathaip/testargocd:${{ env.GITHUB_SHA }}
         
-      - name: Integration test inside Docker-compose cleanup
-        run: docker-compose -f docker-compose.test.yml down
+      # - name: Integration test inside Docker-compose cleanup
+      #   run: docker-compose -f docker-compose.test.yml down
     
-      - name: Integration test inside Docker-compose
-        run: docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from it_tests
+      # - name: Integration test inside Docker-compose
+      #   run: docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from it_tests
+
+      - name: Check username 
+        run: echo ${{ github.actor }}
+        
+      - name: Check GITHUB TOKEN
+        run:  echo ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login ghcr.io
         uses: docker/login-action@v1.8.0
