--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,17 +24,11 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag ghcr.io/chinathaip/testargocd:${{ env.GITHUB_SHA }}
         
-      # - name: Integration test inside Docker-compose cleanup
-      #   run: docker-compose -f docker-compose.test.yml down
+      - name: Integration test inside Docker-compose cleanup
+        run: docker-compose -f docker-compose.test.yml down
     
-      # - name: Integration test inside Docker-compose
-      #   run: docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from it_tests
-
-      - name: Check username 
-        run: echo ${{ github.actor }}
-        
-      - name: Check GITHUB TOKEN
-        run:  echo ${{ secrets.GITHUB_TOKEN }}
+      - name: Integration test inside Docker-compose
+        run: docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from it_tests
 
       - name: Login ghcr.io
         uses: docker/login-action@v1.8.0
