--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,34 +49,37 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+
+
   # ==============
   # CD task
   # ==============
-  # gitops-versioning:
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-push-docker-image
-  #   steps:
-  #     - name: checkout
-  #       uses: actions/checkout@v2
-  #       with:
-  #         repository: aorjoa-training/devops-argocd
-  #         persist-credentials: false
-  #         fetch-depth: 0
-  #     - name: change image tag
-  #       run: |
-  #         git --version
-  #         git config user.name "aorjoa"
-  #         git config user.email "root@aorjoa.link"
-  #         sed -i -E "s/ghcr.io\/aorjoa-training\/devops-go-example.*$/ghcr.io\/aorjoa-training\/devops-go-example:${GITHUB_SHA}/" kube-gitops/deployment.yml
-  #         git add kube-gitops/deployment.yml
-  #         git commit -m "🤖 change docker image version to ${GITHUB_SHA}"
-  #     # line 87: 
-  #     # open the kube-gitios/deployment.yml file in the 'devops-argocd' repo(tutorial), 
-  #     # try to change the value of 'image' inside this file
-  #     # by searching for regular expression: find any line that has a pattern of ghcr.io/aorjoa-training/devops-go-example
-  #     - name: push changes
-  #       uses: ad-m/github-push-action@master
-  #       with:
-  #         github_token: ${{ secrets.PAT }}
-  #         repository: chinathaip/testargocd
-  #         branch: main
+  gitops-versioning:
+    runs-on: ubuntu-latest
+    needs: build-and-push-docker-image
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          repository: aorjoa-training/devops-argocd
+          persist-credentials: false
+          fetch-depth: 0
+      - name: change image tag
+        run: |
+          git --version
+          git config user.name "chinathaip"
+          git config user.email "cartoonabe@gmail.com"
+          sed -i -E "s/ghcr.io\/chinathaip\/testargocd.*$/ghcr.io\/chinathaip\/testargocd:${GITHUB_SHA}/" kube-gitops/deployment.yml
+          git add kube-gitops/deployment.yml
+          git commit -m "🤖 change docker image version to ${GITHUB_SHA}"
+      # line 87: 
+      # open the kube-gitios/deployment.yml file in the 'devops-argocd' repo(tutorial), 
+      # try to change the value of 'image' inside this file
+      # by searching for regular expression: find any line that has a pattern of ghcr.io/aorjoa-training/devops-go-example
+      - name: push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.PAT }}
+          repository: chinathaip/testargocd
+          branch: main
