--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: pun-api
-        image: ghcr.io/chinathaip/testargocd:6237aefd7e43d50aa517b5ebc93242ae388122dc
+        image: ghcr.io/chinathaip/testargocd:333
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
