--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,7 +62,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
         with:
-          repository: aorjoa-training/devops-argocd
+          repository: chinathaip/testargocd
           persist-credentials: false
           fetch-depth: 0
       - name: change image tag
